--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,6 @@
 <!--muuta olemassaolevia tiedostoja -> täten siis muutettu
 lisää tiedosto(ja)
 poista tiedosto(ja)-->
-
+<p>lisätään tähän nyt juttuja, jotta on jotain lisättävää</p>
 </body>
 </html>
