--- a/hello.html
+++ b/hello.html
@@ -4,6 +4,9 @@
 <!--muuta olemassaolevia tiedostoja -> täten siis muutettu
 lisää tiedosto(ja)
 poista tiedosto(ja)-->
-<p>lisätään tähän nyt juttuja, jotta on jotain lisättävää</p>
+<p>lisätään tähän nyt juttuja, jotta on jotain lisättävää<div class="">
+
+    lisätään lisää juttuja, jotta voidaan tehä lisää committeja
+</div></p>
 </body>
 </html>
