lisätään taas yksi rivi, jotta voidaan kokeilla entiseen palaamista

--- a/hello.html
+++ b/hello.html
@@ -11,6 +11,8 @@ poista tiedosto(ja)-->
     ja taas
 
     ja taaas
+
+    sitten lisäillään jotain, jotta voidaan taas palauttaa aikasempi versio
 </div></p>
 </body>
 </html>
