--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
 <!--muuta olemassaolevia tiedostoja -> täten siis muutettu
 lisää tiedosto(ja)
 poista tiedosto(ja)-->
-<p>lisätään tähän nyt juttuja, jotta on jotain lisättävää<div class="">
+<p>lisätään tähän nyt juttuja, jotta on jotain lisättävää
 
     lisätään lisää juttuja, jotta voidaan tehä lisää committeja
 
@@ -13,6 +13,7 @@ poista tiedosto(ja)-->
     ja taaas
 
     sitten lisäillään jotain, jotta voidaan taas palauttaa aikasempi versio
-</div></p>
+</p>
+<p> tehään tähän taas lisää muutoksia</p>
 </body>
 </html>
