--- a/hello.html
+++ b/hello.html
@@ -1,24 +1,19 @@
 <!DOCTYPE html>
-<head></head>
+<!DOCTYPE html>
+<head>
+    <meta lang="utf-8"/>
+</head>
 <body>
-<!--muuta olemassaolevia tiedostoja -> täten siis muutettu
-lisää tiedosto(ja)
-poista tiedosto(ja)-->
-<p>lisätään tähän nyt juttuja, jotta on jotain lisättävää
-
+<p>
+    lisätään tähän nyt juttuja, jotta on jotain lisättävää
     lisätään lisää juttuja, jotta voidaan tehä lisää committeja
-
-    ja taas
-
+    ja taas, jeeejeejeeoasdfaoifhaoifh
     ja taaas
-
     sitten lisäillään jotain, jotta voidaan taas palauttaa aikasempi versio
-
-</div></p>
-<h1>OMG TÄÄL ON JUTTUI MITÄ EI OO MUUALLA!! :O</h1>
-
 </p>
-<p> tehään tähän taas lisää muutoksia</p>
+<p>Joku homma</p>
+<h1>OMG TÄÄL ON JUTTUI MITÄ EI OO MUUALLA!! :O</h1>
+<p> tehään tähän taas lisää muutoksia onhan se nyt kiva ku on juttui</p>
 
 </body>
 </html>
