lisättiin div ja script

--- a/hello.html
+++ b/hello.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <!DOCTYPE html>
-<head>
-    <meta lang="utf-8"/>
-</head>
-<body>
-<p>
-    lisätään tähän nyt juttuja, jotta on jotain lisättävää
-    lisätään lisää juttuja, jotta voidaan tehä lisää committeja
-    ja taas, jeeejeejeeoasdfaoifhaoifh
-    ja taaas
-    sitten lisäillään jotain, jotta voidaan taas palauttaa aikasempi versio
-</p>
-<p>Joku homma</p>
-<h1>OMG TÄÄL ON JUTTUI MITÄ EI OO MUUALLA!! :O</h1>
-<p> tehään tähän taas lisää muutoksia onhan se nyt kiva ku on juttui</p>
-
-
-<div>Okei, eli nyt ruvetaan tekemään jotain tosi isoo hommaa!</div>
-</body>
+    <head>
+        <meta lang="utf-8"/>
+    </head>
+    <body>
+        <p>
+            lisätään tähän nyt juttuja, jotta on jotain lisättävää
+            lisätään lisää juttuja, jotta voidaan tehä lisää committeja
+            ja taas, jeeejeejeeoasdfaoifhaoifh
+            ja taaas
+            sitten lisäillään jotain, jotta voidaan taas palauttaa aikasempi versio
+        </p>
+        <p>Joku homma</p>
+        <h1>OMG TÄÄL ON JUTTUI MITÄ EI OO MUUALLA!! :O</h1>
+        <p> tehään tähän taas lisää muutoksia onhan se nyt kiva ku on juttui</p>
+        <div>
+            Okei, eli nyt ruvetaan tekemään jotain tosi isoo hommaa!
+            <h2>Tehään tähän nyt juttuja</h2>
+        </div>
+        <script> 
+            var numero = 1
+            var numeroo = 2
+            var vastaus = numero + numeroo
+        </script>
+    </body>
 </html>
