eka lisäys topiciin

--- a/hello.html
+++ b/hello.html
@@ -23,5 +23,6 @@
             var numeroo = 2
             var vastaus = numero + numeroo
         </script>
+        <p>Sitten ruvetaan säätämään topic -ia <br> topic on vaikka joku x-toiminnallisuus </p>
     </body>
 </html>
