osa 2. muutoksia remotena

--- a/hello.html
+++ b/hello.html
@@ -21,6 +21,7 @@ poista tiedosto(ja)-->
 <p> tehään tähän taas lisää muutoksia</p>
 <p>lisäääääää</p>
 <p>TEHTÄVÄ 3 osa 1 --> tehdään remoteen muutoksia</p>
+<p>tehhöään molempiin muutoksia erikseen</p>
 
 </body>
 </html>
