osa 2. muutoksia ei remotena

--- a/hello.html
+++ b/hello.html
@@ -22,5 +22,6 @@ poista tiedosto(ja)-->
 <p>lisäääääää</p>
 <p>TEHTÄVÄ 3 osa 1 --> tehdään remoteen muutoksia</p>
 
+<p> tehhaaaaaannn taas molempiin muutoksia erikseen</p>
 </body>
 </html>
